# docs/swagger.json
@@ -225,14 +225,8 @@
         "internal_app_api.Tokens": {
             "type": "object",
             "properties": {
-                "expires_at": {
-                    "type": "string"
-                },
-                "refresh_token": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
+                "tokens": {
+                    "$ref": "#/definitions/users.Session"
                 }
             }
         },
@@ -277,10 +271,15 @@
         "task-manager-backend_internal_app_api.Tokens": {
             "type": "object",
             "properties": {
-                "expires_at": {
-                    "type": "string"
-                },
-                "refresh_token": {
+                "tokens": {
+                    "$ref": "#/definitions/users.Session"
+                }
+            }
+        },
+        "users.Session": {
+            "type": "object",
+            "properties": {
+                "refresh": {
                     "type": "string"
                 },
                 "token": {
